HS-258 serializacja handlerów